try fixing fonts on mobile

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,7 +3,22 @@
 // VARIABLES
 //
 
-@import "colors.scss";
+// Colors
+$blue: #4183C4;
+$darkRed: #A70000;
+
+// Grays
+$black: #000;
+$darkerGray: rgb(133, 133, 133);
+$darkGray: rgb(163, 163, 163);
+$gray: rgb(165, 165, 165);
+$lightGray: rgb(204, 204, 204);
+$white: #fff;
+$codeBackground : #282828;
+
+$darkBackground: #171717;
+$lightForeground: #efe9ef; 
+$separatorColor: $lightForeground;
 
 //Font stacks new
 //see:http://sebrink.de/Google-Webfonts-for-my-Jekyll/
